...
    @IBOutlet var iconImageView: UIImageView!
    @IBOutlet var mainLabel: UILabel!
    @IBOutlet var spinner: UIActivityIndicatorView!
    
    func configure(with listStatus: ListStatus) {
        
        mainLabel.accessibilityIdentifier = "current_status_label"
        mainLabel.text = listStatus.description
        iconImageView.image = listStatus.icon
        
        let isLoadingState = listStatus == .loadingData
        iconImageView.isHidden = isLoadingState
        if isLoadingState {
...
